# subjective-logic-rag

./: .gitignore  README.md  pyproject.toml
src/xrag/: __init__.py
src/xrag/baselines/: __init__.py  base.py  combined_heuristic.py  conformal_prediction.py  p_true.py  retrieval_confidence.py  semantic_entropy.py  softmax_confidence.py
src/xrag/benchmarks/: __init__.py  corruption.py  data_loader.py  retriever.py
src/xrag/evaluation/: __init__.py  answer_metrics.py  calibration_metrics.py  conflict_metrics.py  faithfulness_metrics.py  selective_metrics.py
src/xrag/generation/: __init__.py  generator.py
src/xrag/opinion_estimation/: __init__.py  base.py  llm_judge_estimator.py  nli_estimator.py
src/xrag/pipeline/: __init__.py  conflict_layer.py  decision_layer.py  deduction_layer.py  fusion_layer.py  sl_rag_pipeline.py  temporal_layer.py  trust_layer.py
src/xrag/utils/: __init__.py
tests/: conftest.py  test_end_to_end.py  test_smoke.py
tests/test_baselines/: test_combined_heuristic.py  test_conformal_prediction.py  test_p_true.py  test_retrieval_confidence.py  test_semantic_entropy.py  test_softmax_confidence.py
tests/test_benchmarks/: test_corruption.py  test_data_loader.py  test_retriever.py
tests/test_evaluation/: test_answer_metrics.py  test_calibration_metrics.py  test_conflict_metrics.py  test_faithfulness_metrics.py  test_selective_metrics.py
tests/test_generation/: __init__.py  test_generator.py
tests/test_opinion_estimation/: test_llm_judge_estimator.py  test_nli_estimator.py
tests/test_pipeline/: test_conflict_layer.py  test_decision_layer.py  test_deduction_layer.py  test_fusion_layer.py  test_sl_rag_pipeline.py  test_temporal_layer.py  test_trust_layer.py
